Fix scrollbars color

--- a/app/javascript/styles/mastodon/reset.scss
+++ b/app/javascript/styles/mastodon/reset.scss
@@ -59,17 +59,17 @@ table {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: lighten($ui-base-color, 4%);
+  background: lighten($ui-base-color, 16%);
   border: 0px none $base-border-color;
   border-radius: 50px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: lighten($ui-base-color, 6%);
+  background: lighten($ui-base-color, 24%);
 }
 
 ::-webkit-scrollbar-thumb:active {
-  background: lighten($ui-base-color, 4%);
+  background: lighten($ui-base-color, 16%);
 }
 
 ::-webkit-scrollbar-track {
